<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_doctors">

    <fragment
        android:id="@+id/navigation_doctors"
        android:name="com.example.drappoint.activities.core.fragments.DoctorsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_doctors" />

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.example.drappoint.activities.core.fragments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.drappoint.activities.core.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>