<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.core.DoctorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_specialty" />

            <TextView
                android:id="@+id/specialtyTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/specialty"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="14sp"
                android:onClick="dialPhone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_map_marker" />

            <TextView
                android:id="@+id/addressTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="14sp"
                android:onClick="openMap"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_people" />

            <TextView
                android:id="@+id/maxTV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/max_patients"
                android:textColor="#000000"
                android:textSize="14sp"
                android:onClick="openMap"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background_border"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/random_schedule"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/random_schedule"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/random_schedule"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/random_schedule"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/closed"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/closed"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/random_schedule"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background_border"
            android:orientation="horizontal" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:onClick="showAppointmentPicker"
                android:id="@+id/makeAppointmentButton"
                android:background="@drawable/special_background_rounded_border"
                android:textColor="@color/white"
                android:text="@string/make_an_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="1"
                android:padding="20dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shadeLL"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:alpha="0.5"/>
    <LinearLayout
        android:id="@+id/pickLL"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_background_border"
        android:elevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_background_rounded_border">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/random_date"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:gravity="end"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/white_background_border"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/white_background_border"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservations"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/reservationsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/errorTV"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_already_booked_this_day"
            android:textColor="#ff0000"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/confirmButton"
            android:onClick="confirmAppointment"
            android:background="@drawable/grey_background_rounded_border"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1"
            android:padding="20dp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/confirmedTV"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:text="@string/confirmed"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:gravity="center_horizontal"/>
</RelativeLayout>