<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/parentLayout">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photoIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile_grey_100dp"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/white_background_border"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"/>
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person"/>
            <TextView
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/nameET"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="#000000"
                android:inputType="textPersonName"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/editNameIV"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:src="@drawable/ic_phone" />
            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/phoneET"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="#000000"
                android:inputType="phone"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/editPhoneIV"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_map_marker"/>
            <TextView
                android:id="@+id/addressTV"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/address"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/addressET"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="40dp"
                android:text="@string/address"
                android:textSize="14sp"
                android:textColor="#000000"
                android:inputType="text"
                android:layout_gravity="center_vertical"/>


            <ImageView
                android:id="@+id/editAddressIV"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_file"/>
            <TextView
                android:id="@+id/termsTV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="40dp"
                android:text="@string/terms_and_conditions"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/white_background_border"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/signOutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="#EE0000"
            android:textSize="14sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/errorTV"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_input"
        android:background="#EE0000"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:elevation="20dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>